<resources>
    <string name="app_name">OrderDailyTasksApp</string>

    <string name="title_hint">Enter Task</string>

    <string name="hint_description">Enter Task Description</string>

    <string name="note_type_text">Choose Note Type:</string>

    <string-array name="note_type">
        <item>Normal</item>
        <item>Standard</item>
        <item>Urgent</item>
        <item>Notify</item>
    </string-array>

    <string name="set_alert">Set Alert</string>

    <string name="textview_date">Select Date</string>

    <string name="txt_time">Enter Time:</string>

    <string name="Not_Set">Not Set</string>

    <string name="hour_minutes">HH:mm</string>

    <string name="dateformate">dd/MM/yyyy</string>

    <string name="alert_title">title</string>

    <string name="titttle">title</string>
    <string name="title_msg">title</string>

    <string name="alarmtext">Alert: </string>

</resources>
